--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <img src="#" alt="Random GIF">
+  <button>Click Me!</button>
   <script src="index.js"></script>
 </body>
 </html>
