Add search functionality

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </header>
   <main>
     <div id="search">
-      <input type="text" placeholder="Search for a GIF"> <button><i class="fa-solid fa-magnifying-glass"></i></button>
+      <input id="search-input" type="text" placeholder="Search for a GIF"> <button><i class="fa-solid fa-magnifying-glass"></i></button>
     </div>
     <img id="generated-gif" src="#" alt="Random GIF">
   </main>
