Add color variables + change layout

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="search">
       <input id="search-input" type="text" placeholder="Search for a GIF"> <button><i class="fa-solid fa-magnifying-glass"></i></button>
     </div>
-    <img id="generated-gif" src="#" alt="Random GIF">
+    <img id="generated-gif" src="#" alt="Random GIF" style="display: none;">
   </main>
   <script src="index.js"></script>
 </body>
