--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <div id="search">
       <input id="search-input" type="text" placeholder="Search for a GIF"> <button><i class="fa-solid fa-magnifying-glass"></i></button>
     </div>
-    <img id="generated-gif" src="#" alt="Random GIF" style="display: none;">
+    <img id="generated-gif" src="#" alt="Generated GIF" style="display: none;">
+    <p id="error-msg"></p>
   </main>
   <script src="index.js"></script>
 </body>
