--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gif Generator</title>
+  <!-- FAVICON -->
+  <link rel="icon" type="image/png" href="./images/logo.png"/>
   <!-- FONT AWESOME -->
   <script src="https://kit.fontawesome.com/25fd90afcd.js" crossorigin="anonymous"></script>
   <!-- CSS LINK -->
